--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "layout_basic",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "compile:sass": "node-sass scss/main.scss css/main.css -w"
@@ -10,5 +9,14 @@
   "license": "ISC",
   "dependencies": {
     "node-sass": "^4.12.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gautrohit/SCSS-BS4-Training.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gautrohit/SCSS-BS4-Training/issues"
+  },
+  "homepage": "https://github.com/gautrohit/SCSS-BS4-Training#readme",
+  "description": ""
 }
